API Version update
Reverted some API version updated to prevente the app not loading.

--- a/classes/sdgDataProviderFactory.cls
+++ b/classes/sdgDataProviderFactory.cls
@@ -106,7 +106,7 @@ public with sharing class sdgDataProviderFactory  {
                 throw new sdgDataProviderFactoryException('Unable to get class', ex);
             }
         }
-        return null;
+        //return null;
     }
     private static sdgDataProviderType GetType(String tag)
     {
