--- a/classes/sdgDatabase.cls
+++ b/classes/sdgDatabase.cls
@@ -6,7 +6,7 @@ All rights reserved
 */
 public with sharing class sdgDatabase {
 
-public static integer CountQuery(string query, Boolean DisableSharing)
+    public static integer CountQuery(string query, Boolean DisableSharing)
     {
         system.debug('disable sharing: ' + DisableSharing);
         if (DisableSharing)
@@ -39,24 +39,24 @@ public static integer CountQuery(string query, Boolean DisableSharing)
     public with sharing class sdgDatabaseWithSharing {
         public integer CountQuery(string query)
         {
-            return database.countQuery(String.escapeSingleQuotes(query));
+            return database.countQuery(query);
         }
 
         public List<SObject> Query(string query)
         {
-            return database.Query(String.escapeSingleQuotes(query));
+            return database.Query(query);
         }
     }
 
     private without sharing class sdgDatabaseWithoutSharing{
         public integer CountQuery(string query)
         {
-            return database.countQuery(String.escapeSingleQuotes(query));
+            return database.countQuery(query);
         }
 
         public List<SObject> Query(string query)
         {
-            return database.Query(String.escapeSingleQuotes(query));
+            return database.Query(query);
         }
     }
 
